# vectis

./: README.md
cli/: package-lock.json
cli/interfaces/: DaoTunnel.client.ts  DaoTunnel.types.ts  RemoteFactory.types.ts
cli/types/contracts/: Factory.client.ts  Govec.client.ts  Proxy.client.ts  Proxy.types.ts
contracts/dao_tunnel/schema/: vectis-dao-tunnel.json
contracts/factory/schema/: vectis-factory.json
contracts/plugin_registry/: Cargo.toml
contracts/plugin_registry/src/: contract.rs  lib.rs
contracts/proxy/: Cargo.toml
contracts/proxy/schema/: execute_msg_for__empty.json  query_msg.json
contracts/proxy/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/remote_factory/schema/: vectis-remote-factory.json
scripts/: wasmd-node-setup.sh
