[package]
name = "vectis-plugin-registry"
version = "0.1.0"
authors = ["bwty <whalelephant@users.noreply.github.com>", "j0nl1 <j0nl1@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
migration = []

[dependencies]
cosmwasm-std = { version = "1.1.6", features = ["staking"] }
cosmwasm-schema = { version = "1.1.6" }
cw-storage-plus = "0.16"
cw2 = "0.13"
cw-utils = "0.14"
thiserror = { version = "1.0.37" }

[dev-dependencies]
